# CNStudyGuideRust

./: .gitignore  README.md  Taskbreakdowns.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-on-main.yml  release.yml
src/: app.css  app.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: CN study guide - Sheet2.csv
src-tauri/src/: main.rs  study.rs
