[package]
name = "cn_study_guide_rust"
version = "0.1.4"
description = "CN Study Guide"
authors = ["CN Study Guide"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
